# JarvisOS-MistralHackathon

./: .gitignore  LICENSE  README.md  quick.py
APPS_mobile/: build.gradle.kts  settings.gradle.kts
APPS_mobile/app_demo/: build.gradle.kts
APPS_mobile/app_demo/src/main/: AndroidManifest.xml
APPS_mobile/app_demo/src/main/java/jhonatan/s/app_demo/: MainActivity.kt  VoiceEngineCore.kt  VoiceHeadlessService.kt
APPS_mobile/gradle/wrapper/: gradle-wrapper.properties
APPS_mobile/rust_core/: Cargo.toml
APPS_mobile/rust_core/src/: lib.rs
APPS_mobile/voice_engine/: README.md  build.gradle.kts
APPS_mobile/voice_engine/src/androidTest/java/jhonatan/s/voice_context/: ExampleInstrumentedTest.kt
APPS_mobile/voice_engine/src/main/: AndroidManifest.xml
APPS_mobile/voice_engine/src/main/java/jhonatan/s/voice_context/: AssetExtractor.kt  AudioCaptureManager.kt  AudioRingBuffer.kt  BiometricDomain.kt  ByteBufferPool.kt  ContinuousMicrophoneOrchestrator.kt  DiarizationEngine.kt  FuzzyOverlapMerger.kt  GoogleNativeTranscriber.kt  ModelType.kt  RustCore.kt  SpeakerProfile.kt  SpeakerProfileRepository.kt  SpeakerSegment.kt  VoiceContextManager.kt  VoiceEngineState.kt  VoiceSegment.kt  VoiceTranscriber.kt
APPS_mobile/voice_engine/src/main/res/values/: strings.xml  themes.xml
JarvisRag/: settings.gradle.kts
JarvisRag/app/: build.gradle.kts
JarvisRag/app/src/main/: AndroidManifest.xml
JarvisRag/app/src/main/java/jhonatan/s/jarvisrag/: MainActivity.kt
JarvisRag/app/src/main/res/values/: strings.xml  themes.xml
JarvisRag/gradle/: libs.versions.toml
JarvisRag/gradle/wrapper/: gradle-wrapper.properties
JarvisRag/rag_engine/: README.md  build.gradle.kts
JarvisRag/rag_engine/src/main/: AndroidManifest.xml
JarvisRag/rag_engine/src/main/rust/: Cargo.toml  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
JarvisRag/rag_engine/src/main/rust/src/: lib.rs
JarvisRag/rag_engine/src/main/rust/src/androidTest/java/jhonatan/s/rag_engine/: ExampleInstrumentedTest.kt
JarvisRag/rag_engine/src/main/rust/src/main/java/jhonatan/s/rag_engine/: NativeBridge.kt  RagViewModel.kt
JarvisRag/rag_engine/src/main/rust/src/main/rust/: Cargo.toml  build_rag.sh  crear_contexto.py  deep_scan.sh  investigate.sh
JarvisRag/rag_engine/src/main/rust/src/main/rust/src/: lib.rs
JarvisRag/slm_engine/: build.gradle.kts  proguard-rules.pro
JarvisRag/slm_engine/src/main/cpp/: slm_engine.cpp
(+28 files in other folders)
